theme using cookies to avoid flickering

--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -18,29 +18,6 @@
 
 /* extended colors */
 
-/* Make the page fadeIn to avoid flickering */
-
-body {
-    opacity: 0;
-}
-
-.fade-in {
-    opacity: 1;
-    animation-name: fadeInOpacity;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in;
-    animation-duration: 0.1s;
-}
-
-@keyframes fadeInOpacity {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
 /* BEGIN VARS */
 
 :root {
